unpackaged/objects/LeadOpportunitySetting__mdt.object
<CustomObject>
  <fields>
    <fullName>AssignOwnerFrom__c</fullName>
    <defaultValue>'Manual'</defaultValue>
    <label>Assign Owner From</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Manual</fullName>
          <default>true</default>
          <label>Manual</label>
        </value>
        <value>
          <fullName>Account</fullName>
        </value>
        <value>
          <fullName>Dealer</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>BrandsList__c</fullName>
    <label>Brands List</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Brands__c</fullName>
    <label>Brands</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Consumables</fullName>
          <default>true</default>
          <label>Consumables</label>
        </value>
        <value>
          <fullName>Digital</fullName>
        </value>
        <value>
          <fullName>Digital Group</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
        </value>
        <value>
          <fullName>Equipment &amp; Imaging</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Class II</fullName>
        </value>
        <value>
          <fullName>Single Unit Crown</fullName>
        </value>
        <value>
          <fullName>Root To Crown</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>AD</fullName>
          <default>true</default>
          <label>AD</label>
        </value>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AF</fullName>
        </value>
        <value>
          <fullName>AG</fullName>
        </value>
        <value>
          <fullName>AI</fullName>
        </value>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AM</fullName>
        </value>
        <value>
          <fullName>AN</fullName>
        </value>
        <value>
          <fullName>AO</fullName>
        </value>
        <value>
          <fullName>AQ</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>AS</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>AW</fullName>
        </value>
        <value>
          <fullName>AX</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>BA</fullName>
        </value>
        <value>
          <fullName>BB</fullName>
        </value>
        <value>
          <fullName>BD</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BF</fullName>
        </value>
        <value>
          <fullName>BG</fullName>
        </value>
        <value>
          <fullName>BH</fullName>
        </value>
        <value>
          <fullName>BI</fullName>
        </value>
        <value>
          <fullName>BJ</fullName>
        </value>
        <value>
          <fullName>BL</fullName>
        </value>
        <value>
          <fullName>BM</fullName>
        </value>
        <value>
          <fullName>BN</fullName>
        </value>
        <value>
          <fullName>BO</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTest</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ShowDistributor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Distributor</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>UserRoles__c</fullName>
    <label>User Roles</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>Lead &amp; Opportunity Setting</label>
  <listViews>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Category__c</columns>
    <columns>BrandsList__c</columns>
    <columns>Brands__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Denmark_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>DeveloperName</field>
      <operation>contains</operation>
      <value>Denmark</value>
    </filters>
    <label>Denmark_Settings</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Finland_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>DeveloperName</field>
      <operation>contains</operation>
      <value>Finnland</value>
    </filters>
    <label>Finland_Settings</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Norway_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>DeveloperName</field>
      <operation>contains</operation>
      <value>Norway</value>
    </filters>
    <label>Norway_Settings</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Sweden_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>DeveloperName</field>
      <operation>contains</operation>
      <value>Sweden</value>
    </filters>
    <label>Sweden_Settings</label>
    <language>en_US</language>
  </listViews>
  <pluralLabel>Lead &amp; Opportunity Settings</pluralLabel>
</CustomObject>